@@ -18,12 +18,21 @@
  ****************************************************************/
 package org.apache.cayenne.access;
 
+import java.util.List;
+
 import org.apache.cayenne.di.Inject;
+import org.apache.cayenne.query.ObjectSelect;
+import org.apache.cayenne.test.jdbc.DBHelper;
+import org.apache.cayenne.test.jdbc.TableHelper;
 import org.apache.cayenne.testdo.primitive.PrimitivesTestEntity;
 import org.apache.cayenne.unit.di.server.CayenneProjects;
 import org.apache.cayenne.unit.di.server.ServerCase;
 import org.apache.cayenne.unit.di.server.UseServerRuntime;
 import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 @UseServerRuntime(CayenneProjects.PRIMITIVE_PROJECT)
 public class PrimitiveAttributesIT extends ServerCase {
@@ -31,11 +40,39 @@ public class PrimitiveAttributesIT extends ServerCase {
     @Inject
     private DataContext context;
 
+    @Inject
+    private DBHelper dbHelper;
+
     @Test
     public void testCommit() {
         PrimitivesTestEntity e = context.newObject(PrimitivesTestEntity.class);
         e.setBooleanColumn(true);
+        e.setCharColumn('B');
         e.setIntColumn(88);
         context.commitChanges();
+    }
+
+    @Test
+    public void testSelect() throws Exception {
+        TableHelper tPrimitives = new TableHelper(dbHelper, "PRIMITIVES_TEST");
+        tPrimitives.setColumns("ID", "BOOLEAN_COLUMN", "INT_COLUMN", "CHAR_COLUMN");
+        tPrimitives.insert(1, true, -100, String.valueOf('a'))
+                .insert(2, false, 0, String.valueOf('~'))
+                .insert(3, true, Integer.MAX_VALUE, String.valueOf('Å'));
+
+        List<PrimitivesTestEntity> result = ObjectSelect.query(PrimitivesTestEntity.class)
+                .orderBy(PrimitivesTestEntity.INT_COLUMN.asc()).select(context);
+        assertEquals(3, result.size());
+        assertEquals(-100, result.get(0).getIntColumn());
+        assertEquals('a', result.get(0).getCharColumn());
+        assertTrue(result.get(0).isBooleanColumn());
+
+        assertEquals(0, result.get(1).getIntColumn());
+        assertEquals('~', result.get(1).getCharColumn());
+        assertFalse(result.get(1).isBooleanColumn());
+
+        assertEquals(Integer.MAX_VALUE, result.get(2).getIntColumn());
+        assertEquals('Å', result.get(2).getCharColumn());
+        assertTrue(result.get(2).isBooleanColumn());
     }
 }
