@@ -10,11 +10,13 @@
     <property name="defaultClientSuperclass" value="org.apache.cayenne.PersistentObject"/>
     <db-entity name="PRIMITIVES_TEST">
         <db-attribute name="BOOLEAN_COLUMN" type="BOOLEAN"/>
+        <db-attribute name="CHAR_COLUMN" type="CHAR" length="1"/>
         <db-attribute name="ID" type="INTEGER" isPrimaryKey="true" isMandatory="true"/>
         <db-attribute name="INT_COLUMN" type="INTEGER"/>
     </db-entity>
     <obj-entity name="PrimitivesTestEntity" className="org.apache.cayenne.testdo.primitive.PrimitivesTestEntity" dbEntityName="PRIMITIVES_TEST">
         <obj-attribute name="booleanColumn" type="boolean" db-attribute-path="BOOLEAN_COLUMN"/>
+        <obj-attribute name="charColumn" type="char" db-attribute-path="CHAR_COLUMN"/>
         <obj-attribute name="intColumn" type="int" db-attribute-path="INT_COLUMN"/>
     </obj-entity>
 </data-map>
